übersetze doc in Deutsch & update JavaDoc Html